fix(ui): Fixes sticky column issue, border bleed through issue on mobile

--- a/apps/ui-app/src/pages/componentGuides/components/ExampleViewer/ExampleViewer.module.scss
+++ b/apps/ui-app/src/pages/componentGuides/components/ExampleViewer/ExampleViewer.module.scss
@@ -61,7 +61,7 @@ $compactMinHeight: 4rem;
   min-width: 100%;
   padding: 1rem;
   white-space: normal;
-  width: fit-content;
+  width: 100%;
 
   &.multipleExamples {
     margin-top: 2.5rem;
