--- a/packages/ui/src/components/Table/Table.module.scss
+++ b/packages/ui/src/components/Table/Table.module.scss
@@ -180,6 +180,38 @@
   vertical-align: middle;
 }
 
+.head .row:first-child > .cell:first-child {
+  border-start-start-radius: var(
+    --themeshift-components-table-border-radius,
+    0.25rem
+  );
+}
+
+.head .row:first-child > .cell:last-child {
+  border-start-end-radius: var(
+    --themeshift-components-table-border-radius,
+    0.25rem
+  );
+}
+
+.body .row:last-child > .cell:first-child,
+.emptyRow > .cell:first-child,
+.foot .row:last-child > .cell:first-child {
+  border-end-start-radius: var(
+    --themeshift-components-table-border-radius,
+    0.25rem
+  );
+}
+
+.body .row:last-child > .cell:last-child,
+.emptyRow > .cell:last-child,
+.foot .row:last-child > .cell:last-child {
+  border-end-end-radius: var(
+    --themeshift-components-table-border-radius,
+    0.25rem
+  );
+}
+
 .header {
   @include typography.style('body.strong');
 
